--- a/style.css
+++ b/style.css
@@ -6,29 +6,46 @@
     border-radius: 20px;
     overflow: hidden;
     /* justify-content: center; */
-    align-items: center;
+    align-items: cent;
+    padding: 4%;
     display: flex;
     flex-direction: column;
 }
 #Design {
     height: auto;
 }
+body {
+  width: 100%;
+  /* height: 99vh; */
+  display: flex;
+  justify-content: center;
+  background-color: black !important;
+}
 
 .card1 {
     display: flex;
-    width: 100%;
+    width: 30%;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
+    /* background-color: black; */
 }
 
 .card form input {
-    width: 50%;
+    width: 93%;
     height: 4vh;
-    border-radius: 20px;
     padding: 4%;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid black;
 }
+textarea {
+  border: none;
+  padding: 6%;
+  outline: none;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -39,32 +56,35 @@
     display: flex;
     width: 90%;
     justify-content: space-around;
-    align-items: center;
-    height: 10vh;
+    flex-direction: column;
+    align-items: start;
+    /* height: 10vh; */
 }
 
-h2 {
+/* h2 {
     /* justify-content: center; */
-    display: flex;
-    width: 100%;
-    background-color: antiquewhite;
-    height: 6vh;
-    justify-content: center;
-    align-items: center;
-}
+    /* display: flex; */
+
+    /* width: 100%; */
+    /* background-color: antiquewhite; */
+    /* height: 6vh; */
+    /* justify-content: center; */
+    /* align-items: center; */
+/* } */d
 button {
     width: 30%;
     height: 4vh;
     border-radius: 10px;
 }
 p {
-    width: 70%;
-    background-color: aqua;
-    height: 4vh;
+    /* width: 70%; */
+    background-color: rgb(185, 185, 185);
+    /* height: 4vh; */
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
-    border-radius: 10px;
+    border-radius: 5px;
+    padding: 4%;
     margin-bottom: 3%;
     min-height: 4vh;
 
@@ -132,4 +152,119 @@ p {
   .button:active {
     border: 1px solid #2e8644;
   }
-/* button add  */
+/* button add  */ 
+#btn1 {
+  width: 20%;
+  background-color: #2e8644;
+}
+*{
+  box-sizing: border-box;
+}
+
+@media screen and (min-width:100px) and (max-width:500px) {
+  .card {
+    width: 90%;
+  }
+  
+}
+
+.d-inline-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  /* position: fixed; */
+  margin-top: 4%;
+}
+
+.collapse {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+}
+.collapsing {
+  /* display: flex; */
+  justify-content: center !important;
+  width: 90%;
+  height: 10vh;
+}
+
+
+
+/* button  */
+.button1 {
+  appearance: button;
+  background-color: #2e8644;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: .8px;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 13px 19px;
+  text-align: center;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transform: translateZ(0);
+  transition: filter .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  font-size: 10px;
+  position: absolute;
+  bottom: 3%;
+  right: 1%;
+  white-space: nowrap;
+}
+
+.button1:after {
+  background-clip: padding-box;
+  background-color: #52ca72;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  bottom: -4px;
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+
+.button1:main,
+.button1:focus {
+  user-select: auto;
+}
+
+.button1:hover:not(:disabled) {
+  filter: brightness(1.1);
+}
+
+.button1:disabled {
+  cursor: auto;
+}
+
+button:active:after {
+  border-width: 0 0 0px;
+}
+
+button:active {
+  padding-bottom: 10px;
+}
+ /* button  */
+
+ .Dis {
+  color: gainsboro;
+ }
