--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
-
 .card {
-    border: 2px solid red;
-    margin-top: 2%;
-    width: 90%;
-    border-radius: 20px;
-    overflow: hidden;
-    /* justify-content: center; */
-    align-items: cent;
-    padding: 4%;
-    display: flex;
-    flex-direction: column;
+  border: 2px solid red;
+  margin-top: 2%;
+  width: 90%;
+  border-radius: 20px;
+  overflow: hidden;
+  /* justify-content: center; */
+  align-items: cent;
+  padding: 4%;
+  display: flex;
+  flex-direction: column;
 }
+
 #Design {
-    height: auto;
+  height: auto;
 }
+
 body {
   width: 100%;
   /* height: 99vh; */
@@ -23,141 +24,147 @@ body {
 }
 
 .card1 {
-    display: flex;
-    width: 30%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* overflow-y: scroll; */
-    /* background-color: black; */
+  display: flex;
+  width: 30%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* overflow-y: scroll; */
+  /* background-color: black; */
 }
 
 .card form input {
-    width: 93%;
-    height: 4vh;
-    padding: 4%;
-    outline: none;
-    border: none;
-    border-bottom: 1px solid black;
+  width: 93%;
+  height: 4vh;
+  padding: 4%;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid black;
 }
+
 textarea {
   border: none;
   padding: 6%;
   outline: none;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .card form {
-    display: flex;
-    width: 90%;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: start;
-    /* height: 10vh; */
+  display: flex;
+  width: 90%;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: start;
+  /* height: 10vh; */
 }
 
 /* h2 {
     /* justify-content: center; */
-    /* display: flex; */
+/* display: flex; */
 
-    /* width: 100%; */
-    /* background-color: antiquewhite; */
-    /* height: 6vh; */
-    /* justify-content: center; */
-    /* align-items: center; */
-/* } */d
-button {
-    width: 30%;
-    height: 4vh;
-    border-radius: 10px;
+/* width: 100%; */
+/* background-color: antiquewhite; */
+/* height: 6vh; */
+/* justify-content: center; */
+/* align-items: center; */
+/* } */
+d button {
+  width: 30%;
+  height: 4vh;
+  border-radius: 10px;
 }
+
 p {
-    /* width: 70%; */
-    background-color: rgb(185, 185, 185);
-    /* height: 4vh; */
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    border-radius: 5px;
-    padding: 4%;
-    margin-bottom: 3%;
-    min-height: 4vh;
+  /* width: 70%; */
+  background-color: rgb(185, 185, 185);
+  /* height: 4vh; */
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  border-radius: 5px;
+  padding: 4%;
+  margin-bottom: 3%;
+  min-height: 4vh;
 
 }
 
 
 /* button add  */
 .button {
-    position: relative;
-    overflow: hidden;
-    width: 150px;
-    height: 40px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    border: 1px solid #34974d;
-    background-color: #3aa856;
-    position: fixed;
-    top: 90%;
-  }
-  
-  .button, .button__icon, .button__text {
-    transition: all 0.3s;
-  }
-  
-  .button .button__text {
-    transform: translateX(30px);
-    color: #fff;
-    font-weight: 600;
-  }
-  
-  .button .button__icon {
-    position: absolute;
-    transform: translateX(109px);
-    height: 100%;
-    width: 39px;
-    background-color: #34974d;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .button .svg {
-    width: 30px;
-    stroke: #fff;
-  }
-  
-  .button:hover {
-    background: #34974d;
-  }
-  
-  .button:hover .button__text {
-    color: transparent;
-  }
-  
-  .button:hover .button__icon {
-    width: 148px;
-    transform: translateX(0);
-  }
-  
-  .button:active .button__icon {
-    background-color: #2e8644;
-  }
-  
-  .button:active {
-    border: 1px solid #2e8644;
-  }
-/* button add  */ 
+  position: relative;
+  overflow: hidden;
+  width: 150px;
+  height: 40px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border: 1px solid #34974d;
+  background-color: #3aa856;
+  position: fixed;
+  top: 90%;
+}
+
+.button,
+.button__icon,
+.button__text {
+  transition: all 0.3s;
+}
+
+.button .button__text {
+  transform: translateX(30px);
+  color: #fff;
+  font-weight: 600;
+}
+
+.button .button__icon {
+  position: absolute;
+  transform: translateX(109px);
+  height: 100%;
+  width: 39px;
+  background-color: #34974d;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button .svg {
+  width: 30px;
+  stroke: #fff;
+}
+
+.button:hover {
+  background: #34974d;
+}
+
+.button:hover .button__text {
+  color: transparent;
+}
+
+.button:hover .button__icon {
+  width: 148px;
+  transform: translateX(0);
+}
+
+.button:active .button__icon {
+  background-color: #2e8644;
+}
+
+.button:active {
+  border: 1px solid #2e8644;
+}
+
+/* button add  */
 #btn1 {
   width: 20%;
   background-color: #2e8644;
 }
-*{
+
+* {
   box-sizing: border-box;
 }
 
@@ -165,7 +172,15 @@ p {
   .card {
     width: 90%;
   }
-  
+
+  .d-inline-flex {
+    width: 230%;
+  }
+
+  .card1 {
+    width: 90%;
+  }
+
 }
 
 .d-inline-flex {
@@ -182,6 +197,7 @@ p {
   display: flex;
   justify-content: center;
 }
+
 .collapsing {
   /* display: flex; */
   justify-content: center !important;
@@ -263,8 +279,9 @@ button:active:after {
 button:active {
   padding-bottom: 10px;
 }
- /* button  */
 
- .Dis {
+/* button  */
+
+.Dis {
   color: gainsboro;
- }
+}
