--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
   padding: 4%;
   display: flex;
   flex-direction: column;
+  font-size: 14px;
+}
+.card h2 {
+  font-size: 20px;
 }
 
 #Design {
@@ -62,7 +66,6 @@ textarea {
   align-items: start;
   /* height: 10vh; */
 }
-
 /* h2 {
     /* justify-content: center; */
 /* display: flex; */
@@ -108,6 +111,8 @@ p {
   position: fixed;
   top: 90%;
 }
+
+
 
 .button,
 .button__icon,
