--- a/style.css
+++ b/style.css
@@ -1,35 +1,45 @@
 .card {
   border: 2px solid red;
   margin-top: 2%;
-  width: 90%;
+  width: 30%;
   border-radius: 20px;
-  overflow: hidden;
+  /* overflow: scroll; */
   /* justify-content: center; */
   align-items: cent;
-  padding: 4%;
+  padding: 2%;
   display: flex;
-  flex-direction: column;
+  flex-direction:column;
+  height: 40vh;
   font-size: 14px;
+  margin-left:2%;
 }
 .card h2 {
   font-size: 20px;
 }
+.add {
+  display: flex;
+  flex-wrap: wrap;
+  width: 90%;
+  /* justify-content: space-between; */
+}
+
 
 #Design {
   height: auto;
 }
 
 body {
-  width: 100%;
+  /* width: 100%; */
   /* height: 99vh; */
-  display: flex;
-  justify-content: center;
+  /* display: flex; */
+  /* margin-left: ; */
+  /* justify-content: center; */
   background-color: black !important;
 }
 
 .card1 {
   display: flex;
-  width: 30%;
+  /* width: 100%; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -194,7 +204,7 @@ p {
   align-items: center;
   background-color: transparent;
   /* position: fixed; */
-  margin-top: 4%;
+  /* margin-top: 4%; */
 }
 
 #Btn10 {
