--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 body {
   /* width: 100%; */
   /* height: 99vh; */
-  /* display: flex; */
+  display: flex;
   /* margin-left: ; */
   /* justify-content: center; */
   background-color: black !important;
@@ -186,14 +186,29 @@ p {
 @media screen and (min-width:100px) and (max-width:500px) {
   .card {
     width: 90%;
+    padding: 4%;
   }
+  /* .button12 {
+    position: absolute;
+    left: 4%;
+  } */
 
   .d-inline-flex {
     width: 230%;
   }
+  .add {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
   .card1 {
     width: 90%;
+    justify-content: center;
+  }
+  body {
+    justify-content: center;
+    align-items: center;
   }
 
 }
